<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:padding="16dp">
    <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/share_title" />
    <Button
            android:id="@+id/share_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_fb" />
    <Button
            android:id="@+id/share_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_email" />
</LinearLayout>