<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
        <LinearLayout
                android:id="@+id/login_contentLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="128dp"
                android:layout_marginBottom="128dp">
            <EditText
                    style="@style/LoginHorizontalField"
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email"
                    android:inputType="textEmailAddress"
                    android:scrollHorizontally="true" />
            <EditText
                    style="@style/LoginHorizontalField"
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:scrollHorizontally="true" />

            <LinearLayout
                    style="@style/LoginHorizontalField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                <Button
                        android:id="@+id/login_submit"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/login_submit"/>
                <Button
                        android:id="@+id/login_register"
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/login_register"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/login_loadingLayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginTop="128dp"
                android:layout_marginBottom="128dp"
                android:orientation="vertical"
                android:visibility="invisible">
            <ProgressBar
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:indeterminate="true" />
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login_logging_in" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>